[package]
name = "cypher"
version = "0.1.2"
edition = "2021"

[dependencies]
eframe = { version = "0.32.0", features = ["serde"] }
egui = { version = "0.32.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio and communication
cpal = { version = "0.15.3", features = ["jack"] }
ringbuf = "0.3.3"
anyhow = "1.0"
midir = "0.9.1"
rand = "0.8.5"
rayon = "1.8.0" # Added for parallel processing
chrono = "0.4" # Added for timestamps

# Sampler
rfd = "0.14.1"
rodio = { version = "0.18.1", features = ["symphonia-all"] }
once_cell = "1.19.0"
walkdir = "2.5.0"
rubato = "0.14.1"
hound = "3.5"